kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorecalifornia.com
  name: explorecalifornia.com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorecalifornia.com
  template:
    metadata:
      labels:
        app: explorecalifornia.com
    spec:
      containers:
      - image: locahost:5000/explorecalifornia.com
        name: explorecalifornia-com-bhb66
        resources: {}
status: {}
